overflow auto on code tags, fix media upload

--- a/public/bootstrap/type.less
+++ b/public/bootstrap/type.less
@@ -164,6 +164,7 @@ code, pre {
   font-family: Monaco, Andale Mono, Courier New, monospace;
   font-size: 12px;
   .border-radius(3px);
+  overflow: auto;
 }
 code {
   background-color: lighten(@orange, 40%);
@@ -181,7 +182,4 @@ pre {
   border: 1px solid rgba(0,0,0,.15);
   .border-radius(3px);
   white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-
 }
